<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_create"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.andrey.myapplication2.CreateActivity"
    tools:showIn="@layout/activity_create">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/create_event_progress"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/create_event_form"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/event_text_layout"
                app:counterEnabled="true"
                app:counterMaxLength="140">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:ems="10"
                    android:id="@+id/event_text"
                    android:hint="@string/hint_event_text"
                    android:maxLength="140"
                    android:maxLines="4"
                    android:minLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/event_time_label"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:id="@+id/textView2"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:id="@+id/event_time_spinner"
                android:entries="@array/event_time"
                style="@style/Widget.AppCompat.Spinner"
                android:spinnerMode="dialog" />

            <TextView
                android:text="@string/event_category_label"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:id="@+id/textView3"
                android:textColor="@color/colorAccent" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:id="@+id/event_category_spinner"
                android:entries="@array/event_category"
                android:prompt="@string/event_category_prompt"
                style="@style/Widget.AppCompat.Spinner"
                android:spinnerMode="dialog" />

            <TextView
                android:text="@string/event_address_label"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:id="@+id/textView6"
                android:textColor="@color/colorAccent" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <RadioButton
                    android:text="@string/radio_gps_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_gps"
                    android:layout_weight="1"
                    android:checked="true"
                    android:onClick="onRadioButtonClicked"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="32dp"
                    android:gravity="center_vertical"
                    android:id="@+id/gps_text"
                    android:layout_weight="1"
                    android:textSize="18sp"
                    android:minHeight="40dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="7dp" />

                <Button
                    android:text="@string/btn_gps_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/open_gps_settings"
                    android:layout_weight="1"
                    android:layout_marginBottom="7dp"
                    android:onClick="onClickLocationSettings"
                    android:visibility="gone" />

                <RadioButton
                    android:text="@string/radio_address_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/radio_address"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="28dp"
                    android:id="@+id/event_address_layout">

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:id="@+id/event_address"
                        android:hint="@string/event_address_text"
                        android:maxLength="80" />
                </android.support.design.widget.TextInputLayout>
            </RadioGroup>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:paddingTop="15dp"
                android:visibility="gone"
                android:id="@+id/image_preview_layout"
                android:layout_height="90dp"
                android:gravity="center_horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_image_24dp"
                    android:id="@+id/image_preview1"
                    android:layout_weight="1"
                    android:visibility="invisible" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_image_24dp"
                    android:id="@+id/image_preview2"
                    android:layout_weight="1"
                    android:visibility="gone" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    app:srcCompat="@drawable/ic_image_24dp"
                    android:id="@+id/image_preview3"
                    android:layout_weight="1"
                    android:visibility="gone" />
            </LinearLayout>

            <Button
                android:text="@string/btn_attach_photo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_attach_photo"
                android:layout_marginTop="10dp"
                android:onClick="showPhotoDialog" />

            <Button
                android:text="@string/btn_create_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/create_event_btn"
                android:layout_marginTop="10dp"
                android:textColor="@color/cast_libraries_material_featurehighlight_text_body_color"
                android:textSize="14sp"
                android:onClick="SaveButtonClick"
                style="@style/Widget.AppCompat.Button.Colored" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
