<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_lk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.andrey.myapplication2.LKActivity"
    tools:showIn="@layout/activity_lk">

    <ProgressBar
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/lk_progress"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lk_form">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical"
            android:focusableInTouchMode="true">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/lk_avatar_image"
                android:scaleType="centerInside"
                android:onClick="getFileAvatar"/>

            <ImageButton
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                app:srcCompat="@drawable/ic_photo_camera"
                android:id="@+id/imageButton"
                android:onClick="getFileAvatar"
                android:background="@android:color/transparent" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lk_name_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:id="@+id/lk_name"
                    android:maxLines="1"
                    android:inputType="text" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/lk_vk_layout">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_vk"
                    android:id="@+id/vk_name"
                    android:maxLines="1"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:text="@string/category_text_lk"
                android:layout_width="match_parent"
                android:id="@+id/textView"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:textColor="@color/colorAccent" />

            <ListView
                android:layout_width="match_parent"
                android:id="@+id/category_listview"
                android:choiceMode="multipleChoice"
                android:scrollbars="none"
                android:layout_height="290dp" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>
